--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       font-family: "Segoe UI", Roboto, sans-serif;
       color: white;
       height: 100vh;
-      background: url("FONDO.jpg") center/cover no-repeat fixed;
+      background: url("FONDO.png") center/cover no-repeat fixed;
       display: flex;
       align-items: center;
       justify-content: center;
