--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     // === BOTÓN DE UBICACIÓN ===
     const mapBtn=document.getElementById('map-btn');
     mapBtn.addEventListener('click',()=>{
-      window.open('https://maps.app.goo.gl/TU_LINK_DE_UBICACION', '_blank');
+      window.open('https://maps.app.goo.gl/XhqVs9MYNtdwt9vo9', '_blank');
     });
 
     // === EFECTO DE DESTELLOS ===
