--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
       margin-bottom: 10px;
     }
 
+    .faltan {
+      font-size: 1.2em;
+      color: #fff8d2;
+      margin-bottom: 10px;
+      text-shadow: 0 0 6px rgba(242,204,123,0.6);
+      font-weight: 500;
+    }
+
     .countdown {
       display: flex;
       justify-content: center;
@@ -168,6 +176,7 @@
 <body>
   <main>
     <h1>XV de Jennifer ✨</h1>
+    <div class="faltan">Faltan...</div>
 
     <div class="countdown">
       <div class="box"><span class="num" id="d">0</span><div class="lbl">Días</div></div>
