--- a/index.html
+++ b/index.html
@@ -13,17 +13,9 @@
   <style>
     :root { --c-gold:#f2cc7b; --c-silver:#ffffff; }
 
-    /* Fondo */
-    html, body { height:100%; }
-    body{
-      margin:0;
-      font-family:"Segoe UI", Roboto, sans-serif;
-      color:white;
-      background:url("FONDO.png") center / cover no-repeat fixed;
-      overflow-x:hidden;
-    }
+    html, body { height:100%; margin:0; font-family:"Segoe UI", Roboto, sans-serif; color:white;
+      background:url("FONDO.png") center / cover no-repeat fixed; overflow-x:hidden; }
 
-    /* Panel principal */
     main{
       position:fixed;
       top:50%;
@@ -35,7 +27,7 @@
       border:1px solid rgba(255,255,255,.18);
       border-radius:20px;
       backdrop-filter:blur(2px);
-      padding:22px 20px;
+      padding:22px 20px 40px;
       text-align:center;
       box-shadow:0 10px 35px rgba(0,0,0,.35);
     }
@@ -46,7 +38,6 @@
       color:var(--c-gold);
       text-shadow:0 0 12px rgba(242,204,123,.9);
       margin:0 0 6px;
-      line-height:1;
     }
 
     .solo-faltan{
@@ -55,98 +46,78 @@
       color:var(--c-gold);
       text-shadow:0 0 12px rgba(242,204,123,.9);
       margin:0 0 8px;
-      line-height:1;
     }
 
-    /* 🔹 Contador más pequeño */
+    /* Contador */
     .countdown{
-      display:flex; 
-      justify-content:center; 
-      flex-wrap:wrap; 
-      gap:8px; 
-      margin-top:6px;
+      display:flex; justify-content:center; flex-wrap:wrap; gap:8px; margin-top:6px;
     }
     .box{
-      min-width:45px; 
-      border-radius:10px; 
-      padding:6px 8px;
-      background:rgba(0,0,0,.45); 
-      border:1px solid rgba(255,255,255,.25);
+      min-width:45px; border-radius:10px; padding:6px 8px;
+      background:rgba(0,0,0,.45); border:1px solid rgba(255,255,255,.25);
     }
-    .num{
-      font-size:1.2em; 
-      font-weight:700; 
-      display:block; 
-      color:var(--c-silver);
-    }
-    .lbl{
-      font-size:.7em; 
-      opacity:.9;
-    }
+    .num{ font-size:1.2em; font-weight:700; display:block; color:var(--c-silver);}
+    .lbl{ font-size:.7em; opacity:.9; }
 
+    /* Botón de asistencia */
     .btn{
-      display:inline-block; 
-      margin-top:12px; 
-      padding:9px 18px; 
-      border-radius:30px;
-      background:linear-gradient(90deg,#6fb1ff,#acd2ff); 
-      color:#0a1c3c; 
-      text-decoration:none;
-      font-weight:700; 
-      font-size:15px; 
-      border:none; 
-      cursor:pointer; 
-      transition:.3s;
+      display:inline-block; margin-top:12px; padding:9px 18px; border-radius:30px;
+      background:linear-gradient(90deg,#6fb1ff,#acd2ff);
+      color:#0a1c3c; text-decoration:none; font-weight:700;
+      font-size:15px; border:none; cursor:pointer; transition:.3s;
       box-shadow:0 0 12px rgba(255,255,255,.3);
     }
     .btn:hover{ transform:scale(1.05); background:linear-gradient(90deg,#a7ccff,#d1e6ff); }
     .msg{ margin-top:10px; font-size:15px; color:#fff8d2; font-weight:500; text-shadow:0 0 6px rgba(242,204,123,.7); }
 
-    /* 🔹 Botón de música (más arriba, derecha) */
+    /* 📍 Botón ubicación centrado debajo del contador */
+    #map-btn{
+      display:inline-block;
+      margin-top:16px;
+      font-size:15px;
+      background:linear-gradient(90deg,#6fb1ff,#acd2ff);
+      border:2px solid rgba(255,255,255,.6);
+      border-radius:30px;
+      color:#0a1c3c;
+      cursor:pointer;
+      padding:9px 20px;
+      font-weight:700;
+      text-decoration:none;
+      box-shadow:0 0 12px rgba(255,255,255,.5);
+      backdrop-filter:blur(8px);
+      transition:.3s;
+    }
+    #map-btn:hover{ transform:scale(1.1); background:linear-gradient(90deg,#a7ccff,#d1e6ff); }
+
+    /* 🎵 Botón de música fijo abajo a la derecha */
     #music-btn{
-      position:fixed; 
-      bottom:110px; 
-      right:25px; 
+      position:fixed;
+      bottom:25px;
+      right:25px;
       font-size:22px;
-      background:rgba(255,255,255,.2); 
+      background:rgba(255,255,255,.2);
       border:2px solid rgba(255,255,255,.4);
-      border-radius:50%; 
-      color:white; 
-      cursor:pointer; 
+      border-radius:50%;
+      color:white;
+      cursor:pointer;
       padding:10px 13px;
-      backdrop-filter:blur(6px); 
-      box-shadow:0 0 12px rgba(255,255,255,.4); 
-      transition:.3s; 
+      backdrop-filter:blur(6px);
+      box-shadow:0 0 12px rgba(255,255,255,.4);
+      transition:.3s;
       z-index:12;
     }
     #music-btn:hover{ background:rgba(242,204,123,.6); transform:scale(1.15); }
 
-    /* 🔹 Botón ubicación (más arriba, izquierda) */
-    #map-btn{
-      position:fixed; 
-      bottom:110px; 
-      left:25px; 
-      font-size:15px;
-      background:linear-gradient(90deg,#6fb1ff,#acd2ff); 
-      border:2px solid rgba(255,255,255,.6);
-      border-radius:30px; 
-      color:#0a1c3c; 
-      cursor:pointer; 
-      padding:9px 16px; 
-      font-weight:700; 
-      text-decoration:none;
-      box-shadow:0 0 12px rgba(255,255,255,.5); 
-      backdrop-filter:blur(8px); 
-      transition:.3s; 
-      z-index:12;
-    }
-    #map-btn:hover{ transform:scale(1.1); background:linear-gradient(90deg,#a7ccff,#d1e6ff); }
-
-    /* Destellos */
+    /* ✨ Destellos */
     .spark{ position:fixed; pointer-events:none; animation:pop .7s ease-out forwards;
             text-shadow:0 0 6px #fff, 0 0 12px gold; z-index:11; }
     @keyframes pop{ from{transform:translateY(0) scale(1); opacity:1}
                     to{transform:translateY(-60px) scale(.6); opacity:0} }
+
+    /* 📱 Responsive: más espacio debajo del panel */
+    @media (max-width:480px){
+      main{ padding-bottom:60px; }
+    }
   </style>
 </head>
 <body>
@@ -161,14 +132,14 @@
       <div class="box"><span class="num" id="s">00</span><div class="lbl">Seg</div></div>
     </div>
 
+    <a id="map-btn" href="https://maps.app.goo.gl/XhqVs9MYNtdwt9vo9" target="_blank">📍 Ver ubicación</a>
+
     <button id="asistencia" class="btn">💌 Confirmar asistencia</button>
     <p id="mensaje" class="msg"></p>
   </main>
 
-  <!-- Botones flotantes -->
+  <!-- Botón de música -->
   <button id="music-btn" aria-label="Reproducir o pausar música">🎵</button>
-  <a id="map-btn" aria-label="Ver ubicación en Google Maps"
-     href="https://maps.app.goo.gl/XhqVs9MYNtdwt9vo9" target="_blank">📍 Ver ubicación</a>
 
   <!-- Música -->
   <audio id="music" loop>
@@ -222,7 +193,7 @@
       btnAsis.style.opacity = "0.8";
     });
 
-    // Destellos
+    // Destellos al hacer click
     document.addEventListener('click', (e)=>{
       for(let i=0;i<6;i++){
         const spark = document.createElement('div');
