--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>XV de Jennifer</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * {margin: 0; padding: 0; box-sizing: border-box;}
 
     body {
       font-family: 'Parisienne', cursive;
@@ -27,8 +23,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       height: 100%;
+      padding-top: 210px; /* 🔽 AQUI se baja todo el bloque */
       z-index: 5;
       position: relative;
     }
@@ -65,17 +62,8 @@
       min-width: 60px;
     }
 
-    .num {
-      font-size: 1.4rem;
-      color: #fff;
-      font-weight: bold;
-      display: block;
-    }
-
-    .lbl {
-      font-size: 0.9rem;
-      color: #ddd;
-    }
+    .num {font-size: 1.4rem; color: #fff; font-weight: bold; display: block;}
+    .lbl {font-size: 0.9rem; color: #ddd;}
 
     .btn {
       background: linear-gradient(145deg, #a2c8ff, #d1e6ff);
@@ -95,16 +83,13 @@
       position: relative;
     }
 
-    .btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-    }
+    .btn:hover {transform: scale(1.05); box-shadow: 0 0 20px rgba(255,255,255,0.5);}
 
     .music-btn {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(255,255,255,0.15);
       border: none;
       border-radius: 50%;
       width: 55px;
@@ -113,23 +98,18 @@
       color: #fff;
       backdrop-filter: blur(4px);
       cursor: pointer;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
+      box-shadow: 0 0 10px rgba(255,255,255,0.4);
       transition: 0.3s;
       z-index: 5;
     }
 
-    .music-btn:hover {
-      transform: scale(1.1);
-      background: rgba(255, 255, 255, 0.25);
-    }
+    .music-btn:hover {transform: scale(1.1); background: rgba(255,255,255,0.25);}
 
-    /* 🌟 ESTRELLAS Y HOJAS ANIMADAS */
+    /* 🌟 Estrellas y hojas animadas */
     .sky, .leaves {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       pointer-events: none;
       overflow: hidden;
       z-index: 1;
@@ -171,6 +151,7 @@
       .contador { flex-wrap: wrap; gap: 8px; }
       .btn { font-size: 0.9rem; padding: 8px 12px; }
       .music-btn { width: 48px; height: 48px; font-size: 22px; }
+      main { padding-top: 180px; } /* En móviles, un poco menos */
     }
   </style>
 </head>
