--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       align-items: center;
       justify-content: flex-start;
       height: 100%;
-      padding-top: 210px; /* 🔽 AQUI se baja todo el bloque */
+      padding-top: 300px; /* 🔽 Más abajo para no tapar el título */
       z-index: 5;
       position: relative;
     }
@@ -37,10 +37,16 @@
       margin-bottom: 0.5rem;
     }
 
+    /* ✨ Texto “Falta…” brillante dorado */
     h2 {
-      font-size: 1.8rem;
+      font-size: 2rem;
       margin-bottom: 1.5rem;
-      text-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
+      background: linear-gradient(90deg, #ffd700, #fff8b0, #ffd700);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 15px rgba(255, 223, 70, 0.8), 0 0 30px rgba(255, 255, 180, 0.4);
+      font-weight: bold;
+      letter-spacing: 1px;
     }
 
     .contador {
@@ -147,11 +153,11 @@
 
     @media (max-width: 600px) {
       h1 { font-size: 2.2rem; }
-      h2 { font-size: 1.3rem; }
+      h2 { font-size: 1.4rem; }
       .contador { flex-wrap: wrap; gap: 8px; }
       .btn { font-size: 0.9rem; padding: 8px 12px; }
       .music-btn { width: 48px; height: 48px; font-size: 22px; }
-      main { padding-top: 180px; } /* En móviles, un poco menos */
+      main { padding-top: 270px; } /* móvil: un poco menos */
     }
   </style>
 </head>
