--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
       align-items: center;
       justify-content: flex-start;
       height: 100%;
-      padding-top: 300px; /* 🔽 Más abajo para no tapar el título */
+      /* 🔽 Más abajo y responsivo para no tapar el título del fondo */
+      padding-top: clamp(420px, 58vh, 700px);
       z-index: 5;
       position: relative;
     }
 
-    h1 {
-      font-size: 3rem;
-      color: #ffe98a;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
-      margin-bottom: 0.5rem;
-    }
+    /* ⛔️ Este H1 no debe verse porque ya viene en el fondo */
+    h1 { display: none; }
 
     /* ✨ Texto “Falta…” brillante dorado */
     h2 {
@@ -151,13 +148,13 @@
       100% { transform: translateY(110vh) rotate(240deg) scale(1); opacity: 0; }
     }
 
+    /* 📱 En móviles lo bajo más para que no tape el texto del fondo */
     @media (max-width: 600px) {
-      h1 { font-size: 2.2rem; }
       h2 { font-size: 1.4rem; }
       .contador { flex-wrap: wrap; gap: 8px; }
       .btn { font-size: 0.9rem; padding: 8px 12px; }
       .music-btn { width: 48px; height: 48px; font-size: 22px; }
-      main { padding-top: 270px; } /* móvil: un poco menos */
+      main { padding-top: clamp(520px, 65vh, 820px); }
     }
   </style>
 </head>
@@ -166,7 +163,7 @@
   <div class="leaves"></div>
 
   <main>
-    <h1>XV de Jennifer</h1>
+    <h1>XV de Jennifer</h1> <!-- Oculto por CSS -->
     <h2>Falta...</h2>
 
     <div class="contador">
