--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     :root{ color-scheme: dark; }
     *{ margin:0; padding:0; box-sizing:border-box; }
 
-    html, body{
-      background-color:#05162b; /* ✅ fondo sólido detrás de la imagen */
-    }
+    html, body{ background-color:#05162b; } /* fondo sólido detrás del PNG */
 
     body{
       font-family: 'Parisienne', cursive;
@@ -24,7 +22,6 @@
       overflow-x:hidden;
       overflow-y:auto;
       position:relative;
-      /* ✅ respeta la zona segura del notch para que no aparezca blanco */
       padding-top: env(safe-area-inset-top, 0);
     }
 
@@ -42,7 +39,7 @@
     /* El título ya está en el fondo */
     h1{ display:none; }
 
-    /* ✨ “Falta…” dorado con brillo suave (shine lo ponemos luego si quieres) */
+    /* ✨ “Falta…” dorado */
     h2{
       font-size:2rem;
       margin-bottom:1.5rem;
@@ -131,7 +128,7 @@
       animation: leafRealFall var(--ldur,9s) ease-in forwards;
     }
     @keyframes leafRealFall{
-      0%   { transform: translate(-50%, -50%) translate(0,0) rotate(0deg)   scale(1); opacity:.95; }
+      0%   { transform: translate(-50%, -50%) translate(0,0) rotate(0deg)   scale(1);   opacity:.95; }
       25%  { transform: translate(-50%, -50%) translate(10px,20vh) rotate(80deg)  scale(1.05); }
       50%  { transform: translate(-50%, -50%) translate(-15px,45vh) rotate(160deg) scale(1.1); }
       75%  { transform: translate(-50%, -50%) translate(12px,70vh) rotate(240deg)  scale(1.05); }
@@ -192,8 +189,7 @@
       btnAsistencia.textContent = "💖 ¡Has confirmado tu asistencia!";
       btnAsistencia.classList.add("ok");
       btnAsistencia.setAttribute("aria-pressed","true");
-      // Bonus: lanzar unas hojas desde el propio botón al confirmar
-      burstLeavesFrom(btnAsistencia, 6);
+      burstLeavesFrom(btnAsistencia, 4); // pequeña celebración
     });
 
     // 🕐 Contador
@@ -220,28 +216,23 @@
     function spawnStar(){
       const star = document.createElement('div');
       star.className = 'star';
-      // posición horizontal aleatoria
-      star.style.setProperty('--x', Math.random()*100 + '%');
-      // ligera deriva horizontal
+      star.style.setProperty('--x', Math.random()*100 + '%'); // posición horizontal
       star.style.setProperty('--drift', (Math.random() < 0.5 ? -1 : 1) * (10 + Math.random()*30) + 'px');
-      // duración y delay
       star.style.setProperty('--dur', (6 + Math.random()*6) + 's');
       star.style.setProperty('--delay', (Math.random()*2) + 's');
       sky.appendChild(star);
-      // limpiar cuando termine un ciclo completo
-      const ttl = 12000; // ms aprox
-      setTimeout(()=>{ star.remove(); }, ttl);
+      setTimeout(()=>{ star.remove(); }, 12000); // limpieza
     }
-    // flujo continuo de estrellas
     setInterval(spawnStar, 350);
     for(let i=0;i<12;i++) spawnStar();
 
-    // 🍃 Hojas: nacen desde el contador y los botones
+    // 🍃 Hojas: NACEN desde el contador y los botones (versión reducida)
     const leavesLayer = document.querySelector('.leaves-layer');
     const contador = document.getElementById('contador');
     const mapBtn = document.getElementById('map-btn');
+    const isMobile = matchMedia("(max-width:600px)").matches;
+    const MAX_LEAVES = isMobile ? 10 : 16;
 
-    // util: punto aleatorio dentro de un rect
     function randomPointInRect(rect){
       const x = rect.left + Math.random()*rect.width;
       const y = rect.top  + Math.random()*rect.height;
@@ -249,18 +240,17 @@
     }
 
     function makeLeafAt(x, y){
+      if (leavesLayer.childElementCount >= MAX_LEAVES) return;
       const leaf = document.createElement('div');
       leaf.className = 'leaf';
       leaf.style.setProperty('--sx', x + 'px');
       leaf.style.setProperty('--sy', y + 'px');
-      leaf.style.setProperty('--ldur', (7 + Math.random()*5) + 's');
+      leaf.style.setProperty('--ldur', (8.5 + Math.random()*5.5) + 's'); // caída más larga
       leavesLayer.appendChild(leaf);
-      // borrar cuando termina
-      const ttl = 13000;
-      setTimeout(()=> leaf.remove(), ttl);
+      setTimeout(()=> leaf.remove(), 15000);
     }
 
-    function emitLeavesFrom(el, count=2){
+    function emitLeavesFrom(el, count=1){
       const rect = el.getBoundingClientRect();
       for(let i=0;i<count;i++){
         const p = randomPointInRect(rect);
@@ -268,26 +258,22 @@
       }
     }
 
-    // Emisión periódica: desde cuadros del contador y botones
+    const LEAF_INTERVAL = 1900; // ms (más lento)
     setInterval(()=>{
-      // desde cada "box" del contador
       document.querySelectorAll('.contador .box').forEach(box=>{
-        if (Math.random() < 0.7) emitLeavesFrom(box, 1);
+        if (Math.random() < 0.35) emitLeavesFrom(box, 1);  // antes era más alto
       });
-      // botones
-      if (Math.random() < 0.8) emitLeavesFrom(btnAsistencia, 1);
-      if (Math.random() < 0.6) emitLeavesFrom(mapBtn, 1);
-    }, 1000);
+      if (Math.random() < 0.30) emitLeavesFrom(btnAsistencia, 1);
+      if (Math.random() < 0.20) emitLeavesFrom(mapBtn, 1);
+    }, LEAF_INTERVAL);
 
-    // explosión breve (cuando confirmas)
-    function burstLeavesFrom(el, n=6){
+    function burstLeavesFrom(el, n=4){
       for(let i=0;i<n;i++){
-        setTimeout(()=>emitLeavesFrom(el,1), i*120);
+        setTimeout(()=>emitLeavesFrom(el,1), i*150);
       }
     }
 
-    // Recalcular posiciones si cambia el layout (rotación, resize)
-    addEventListener('resize', ()=>{/* nada extra; usamos getBoundingClientRect en cada emisión */});
+    addEventListener('resize', ()=>{ /* usamos getBoundingClientRect en cada emisión */ });
   </script>
 </body>
 </html>
